fix dashboard msg to align with the bubble-plugins

--- a/public/css/custom-style.css
+++ b/public/css/custom-style.css
@@ -1050,6 +1050,9 @@ a[data-toggle="modal"]:focus {
 .overflowHidden {
 	overflow-x: hidden;
 }
+.melis-core-dashboard-msg {
+	margin: 0 10px;
+}
 /* dashboard news bubble */
 .melis-dashboard-bubble-plugin.panel-flip .back .widget .widget-body .media .media-body {
 	margin-left: 0;
